crates/vexor-compiler/tests/golden/error/input/unknown_operator.vx
// invalid operator %
let x = 10 % 3
export Circle(x)
